--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Create gh-pages branch
         run: |
-          git config user.name "Your Name"
-          git config user.email "you@example.com"
+          git config user.name "shania873"
+          git config user.email "vanaeca@hotmail.com"
           git checkout -b gh-pages
           git push origin gh-pages
 
