add github workpace

--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Display current directory
         run: |
+          cd $GITHUB_WORKSPACE
           ls
           pwd  # Print the current working directory
 
