add checkout fix

--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          submodules: recursive
 
       - name: Set up Git
         run: |
