--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Checkout code
-      #   uses: actions/checkout@v2
-      #   with:
-      #     fetch-depth: 0
-      #     submodules: recursive
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          submodules: recursive
 
       - name: Set up Git
         run: |
@@ -62,7 +62,11 @@ jobs:
           cd $GITHUB_WORKSPACE
           ls
           pwd  # Print the current working directory
-
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          submodules: recursive
       - name: Set up Git
         run: |
           cd $GITHUB_WORKSPACE  # Change to the root directory of the project
