--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Git
         run: |
@@ -62,14 +63,9 @@ jobs:
           cd $GITHUB_WORKSPACE
           ls
           pwd  # Print the current working directory
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          submodules: recursive
+
       - name: Set up Git
         run: |
-          cd $GITHUB_WORKSPACE  # Change to the root directory of the project
           git config user.name "shania873"
           git config user.email "vanaeca@hotmail.com"
 
@@ -83,4 +79,4 @@ jobs:
         run: |
           git add .
           git commit -m "Update gh-pages with production build"
-          git push origin gh-pages
+          git push origin HEAD:gh-pages
