--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -47,41 +47,12 @@ jobs:
           path: ./build
 
   deploy:
-    name: Deploy
-    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
-      - name: Downloading artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: production-files
-          path: ./build
-
-      - name: Display current directory
-        run: |
-          cd $GITHUB_WORKSPACE
-          ls
-          pwd  # Print the current working directory
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          submodules: recursive
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Git
-        run: |
-          git config user.name "shania873"
-          git config user.email "vanaeca@hotmail.com"
-
-      - name: Checkout gh-pages branch
-        run: git checkout -b gh-pages origin/gh-pages
-
-      - name: Copy build files to gh-pages branch
-        run: cp -r ./build/* .
-
-      - name: Commit and push changes
-        run: |
-          git add .
-          git commit -m "Update gh-pages with production build"
-          git push origin HEAD:gh-pages
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
