--- a/.github/workflows/CD:CI_MoviesApp.yml
+++ b/.github/workflows/CD:CI_MoviesApp.yml
@@ -1,51 +1,52 @@
-name: Build & deploy
+# Sample workflow for building and deploying a Jekyll site to GitHub Pages
+name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
+  # Build job
   build:
-    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          fetch-depth: 0
-          submodules: recursive
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Git
-        run: |
-          git config user.name "shania873"
-          git config user.email "vanaeca@hotmail.com"
-
-      - name: Installing Node.js
-        uses: actions/setup-node@v1
+          node-version: "14" # Use the desired Node.js version
+      - name: Install dependencies
+        run: npm install
+      - name: Build with Jekyll
+        run: npm run build # Add your npm build command here
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Build Jekyll
+        uses: actions/jekyll-build-pages@v1
         with:
-          node-version: 20 # Change this to the Node.js version you need
+          source: ./build
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
 
-      - name: Installing NPM packages
-        run: npm install --force
-
-      - name: Building project
-        run: npm run build
-
-      - name: Testing project
-        run: npm run test
-
-      - name: Uploading production-ready build files
-        uses: actions/upload-artifact@v2
-        with:
-          name: production-files
-          path: ./build
-
+  # Deployment job
   deploy:
     environment:
       name: github-pages
